--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-icons": "4.2.0",
     "react-loader-spinner": "4.0.0",
     "react-router-dom": "5.2.0",
+    "react-slick": "0.30.2",
+    "slick-carousel": "1.8.1",
     "styled-components": "6.1.11"
   },
   "devDependencies": {
